# IconfontViewer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TtfFontItem.cpp  TtfFontItem.h  conan_provider.cmake  conandata.yml  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  testTTF.py  ttfparser.cpp  ttfparser.h
